--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
   https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@700&display=swap');
 
 :root {
 	--accent: #2337ff;
@@ -30,7 +31,7 @@
 	font-display: swap;
 }
 body {
-	font-family: 'Atkinson', sans-serif;
+	font-family: 'M PLUS Rounded 1c', sans-serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
