fix(markdown): Fixed h2 not displaying correctly

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -58,7 +58,7 @@ const { content: {
 
 					<slot/>
 					<span
-						class="underline underline-offset-2 hover:text-orange-500 decoration-orange-500"
+						class="underline underline-offset-2 hover:text-orange-500 decoration-orange-500 text-2xl"
 					></span>
 					<hr class="border-top border-zinc-400 my-4"/>
 				</div>
