chore(header): Updated Header about link

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import ThemeToggle from './ThemeToggleButton';
         </h2>
       </a>
       <div class="items-center gap-6 hidden md:flex">
-        <HeaderLink href={HOMEPAGE_URL}>About</HeaderLink>
+        <HeaderLink href="/about">About</HeaderLink>
         <HeaderLink
           href="https://github.com/HumanEntity/"
           target="_blank"><IoLogoGithub />Source</HeaderLink
