--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,17 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import Body from '../components/Body.astro';
+import Content from '../components/Content.astro';
+import Knei from '../components/Knei.astro';
+import Masthead from '../components/Masthead.astro';
+import { Image } from '@astrojs/image/components';
+
+const posts = (await Astro.glob("./posts/*.md")).sort(
+	(a: any, b: any) =>
+		new Date(b.frontmatter.pubDate).valueOf() -
+		new Date(a.frontmatter.pubDate).valueOf()
+)
+
 ---
 
 <!doctype html>
@@ -12,39 +23,37 @@ import Body from '../components/Body.astro';
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 	</head>
 	<Body>
-		<Header />
-		<main>
-			<h1 class="font-mplus text-4xl">🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+		<Header title={SITE_TITLE}/>
+		<main class="pt-[56px]">
+			<!-- <h1 class="font-mplus text-center">My site</h1> -->
+			<Masthead/>
+			<Content>
+				<section>
+					<p class="mb-8 indent-4">
+						As an indie developer and member of <Knei/>, I spend countless hours at my desk at home and at <Knei/> workshop.
+					</p>
+				</section>
+				<section>
+					<ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
+					{
+						posts.map(post => (
+						<li class="text-center mb-4">
+							<img
+								class="border border-slate-300 dark:border-zinc-700 rounded-xl"
+								src={post.frontmatter.heroImage}
+								width={720 * 2}
+								alt="Thumbnail"
+							/>
+							<a href={post.url}>
+								<div class="mt-3 text-xl opacity-70">{post.frontmatter.title}</div>
+								<div>{post.frontmatter.description}</div>
+							</a>
+						</li>
+						))
+					}
+					</ul>
+				</section>
+			</Content>
 		</main>
 		<Footer />
 	</Body>
