--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,69 +1,66 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
-import Body from '../components/Body.astro';
-import Content from '../components/Content.astro';
-import { Image } from 'astro:assets';
-import BlogMasthead from '../components/BlogMasthead.astro';
+import BaseHead from '../components/BaseHead.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+import Body from '../components/Body.astro'
+import Content from '../components/Content.astro'
+import BlogMasthead from '../components/BlogMasthead.astro'
 
 // type Props = CollectionEntry<'blog'>['data'];
 
 export interface Props {
-	content: {
+  content: {
     title: string
     description: string
-    pubDate?: string
-    updatedDate?: string
+    pubDate?: Date
+    updatedDate?: Date
     heroImage?: string
     tags?: string[]
   }
 }
 
-const { content: {
-	title,
-	description,
-	pubDate,
-	updatedDate,
-	heroImage
-} } = Astro.props;
+const {
+  content: { title, description, pubDate, updatedDate, heroImage }
+} = Astro.props
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={title} description={description} image={heroImage} />
-	</head>
+  <head>
+    <BaseHead title={title} description={description} image={heroImage} />
+  </head>
 
-	<Body>
-		<Header />
-		<main class="pt-[56px]">
-			{heroImage && <BlogMasthead image={heroImage} width={960} height={480} format="jpg">
-				<div class="uppercase text-sm mb-4">{title}</div>
-				<div class="text-4xl font-mplus font-medium">{description}</div>
-			</BlogMasthead>}
-			<Content className="pt-6">
-				<div class="mb-8">
-					<!-- {heroImage && <img -->
-					<!-- 	class="border border-slate-300 dark:border-zinc-700 rounded-xl" -->
-					<!-- 	width={960} -->
-					<!-- 	height={480} -->
-					<!-- 	src={heroImage} -->
-					<!-- 	alt="">} -->
-					<!-- <h1 class="text-3xl my-1 font-mplus">{title}</h1> -->
-					<!-- <div>{description}</div> -->
-					<hr class="border-top border-zinc-400 my-4"/>
+  <Body>
+    <Header />
+    <main class="pt-[56px]">
+      {
+        heroImage && (
+          <BlogMasthead image={heroImage} width={960} height={480} format="jpg">
+            <div class="uppercase text-sm mb-4">{title}</div>
+            <div class="text-4xl font-mplus font-medium">{description}</div>
+          </BlogMasthead>
+        )
+      }
+      <Content className="pt-6">
+        <div class="mb-8">
+          <!-- {heroImage && <img -->
+          <!-- 	class="border border-slate-300 dark:border-zinc-700 rounded-xl" -->
+          <!-- 	width={960} -->
+          <!-- 	height={480} -->
+          <!-- 	src={heroImage} -->
+          <!-- 	alt="">} -->
+          <!-- <h1 class="text-3xl my-1 font-mplus">{title}</h1> -->
+          <!-- <div>{description}</div> -->
+          <hr class="border-top border-zinc-400 my-4" />
 
-					<slot/>
-					<span
-						class="underline underline-offset-2 hover:text-orange-500 decoration-orange-500 text-2xl"
-					></span>
-					<hr class="border-top border-zinc-400 my-4"/>
-				</div>
-			</Content>
-		</main>
-		<Footer />
-	</Body>
+          <slot />
+          <span
+            class="underline underline-offset-2 hover:text-orange-500 decoration-orange-500 text-2xl"
+          ></span>
+          <hr class="border-top border-zinc-400 my-4" />
+        </div>
+      </Content>
+    </main>
+    <Footer />
+  </Body>
 </html>
