--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,60 +1,77 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import Body from '../components/Body.astro';
-import Content from '../components/Content.astro';
-import Knei from '../components/Knei.astro';
-import Masthead from '../components/Masthead.astro';
-import { Image } from '@astrojs/image/components';
+import BaseHead from '../components/BaseHead.astro'
+import Header from '../components/Header.astro'
+import Footer from '../components/Footer.astro'
+import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
+import Body from '../components/Body.astro'
+import Content from '../components/Content.astro'
+import Knei from '../components/Knei.astro'
+import Masthead from '../components/Masthead.astro'
+import { getCollection } from 'astro:content'
+import { IoLogoGithub } from 'react-icons/io5'
 
-const posts = (await Astro.glob("./posts/*.md")).sort(
-	(a: any, b: any) =>
-		new Date(b.frontmatter.pubDate).valueOf() -
-		new Date(a.frontmatter.pubDate).valueOf()
+const posts = (await getCollection('posts')).sort(
+  (a: any, b: any) =>
+    new Date(b.frontmatter.pubDate).valueOf() -
+    new Date(a.frontmatter.pubDate).valueOf()
 )
 
+const projects = await getCollection('projects')
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<Body>
-		<Header title={SITE_TITLE}/>
-		<main class="pt-[56px]">
-			<!-- <h1 class="font-mplus text-center">My site</h1> -->
-			<Masthead/>
-			<Content>
-				<section>
-					<p class="mb-8 indent-4">
-						As an indie developer and member of <Knei/>, I spend countless hours at my desk at home and at <Knei/> workshop.
-					</p>
-				</section>
-				<section>
-					<ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
-					{
-						posts.map(post => (
-						<li class="text-center mb-4">
-							<img
-								class="border border-slate-300 dark:border-zinc-700 rounded-xl"
-								src={post.frontmatter.heroImage}
-								width={720 * 2}
-								alt="Thumbnail"
-							/>
-							<a href={post.url}>
-								<div class="mt-3 text-xl opacity-70">{post.frontmatter.title}</div>
-								<div>{post.frontmatter.description}</div>
-							</a>
-						</li>
-						))
-					}
-					</ul>
-				</section>
-			</Content>
-		</main>
-		<Footer />
-	</Body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <Body>
+    <Header title={SITE_TITLE} />
+    <main class="pt-[56px]">
+      <!-- <h1 class="font-mplus text-center">My site</h1> -->
+      <Masthead />
+      <Content>
+        <section>
+          <p class="mb-8 indent-4">
+            As an indie developer and member of <Knei />, I spend countless
+            hours at my desk at home and at <Knei /> workshop.
+          </p>
+        </section>
+        <section>
+          <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            {
+              posts.map(post => (
+                <li class="text-center mb-4">
+                  <img
+                    class="border border-slate-300 dark:border-zinc-700 rounded-xl"
+                    src={post.data.heroImage}
+                    width={720 * 2}
+                    alt="Thumbnail"
+                  />
+                  <a href={`/posts/${post.slug}/`}>
+                    <div class="mt-3 text-xl opacity-70">{post.data.title}</div>
+                    <div>{post.data.description}</div>
+                  </a>
+                </li>
+              ))
+            }
+          </ul>
+          <ul class="grid grid-cols-1 md:grid-cols-2 gap-4">
+            {
+              projects.map(project => (
+                <li class="text-center mb-4">
+                  <a href={project.data.repo}>
+                    <section class="relative mb-6 flex justify-center items-center">
+                      <IoLogoGithub size={44} />
+                      <h1 class="text-3xl">{project.data.name}</h1>
+                    </section>
+                  </a>
+                </li>
+              ))
+            }
+          </ul>
+        </section>
+      </Content>
+    </main>
+    <Footer />
+  </Body>
 </html>
